--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "pytest (>=7.2.0)"
+    "pytest (>=7.2.0)",
+    "twaddle (>=1.0.0,<2.0.0)"
 ]
 keywords = ["grammar", "sentence generation", "placeholder text", "twaddle"]
     
